--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-multi-carousel": "^2.6.1",
     "react-tsparticles": "^1.18.11",
     "react-window-ui": "^2.2.0",
     "styled-components": "^5.2.1"
